Fixed Carousels on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,8 @@ html, body {
 	height: 500px;
 }
 .slides{
-	height:200px;
-	width:150px;
+  width: 900px;
+  height: 700px;
 }
 
 
@@ -136,7 +136,12 @@ ul {
 
   }
 @media (max-width: 768px) {
-  
+
+
+  .slide img {
+    height:75%;
+    width:100%;
+  }
 }
 @media (max-width: 576px) {
   .navbar h1{
@@ -174,6 +179,10 @@ ul {
   .col-md-12 strong {
     font-size: 125%;
     color: #9c0;
+  }
+  .slide img {
+    height:75%;
+    width:100%;
   }
 
 }
